# MeshEE

./: index.html  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: error.rs  mod.rs  profile.rs  storage.rs
src-tauri/src/p2p/: error.rs  identity.rs  message.rs  mod.rs  swarm.rs
src/api/: tauri.ts
src/composables/: useAuth.ts  useIntersectionObserver.ts  useScrollLoader.ts  useTauri.ts  useTauriWindow.ts
src/domains/auth/components/: InviteModal.vue  LoginForm.vue  PasswordInput.vue
src/domains/chat/components/: ChatList.vue
src/domains/main/components/: BaseAppBar.vue  BaseButton.vue  BaseChatList.vue  BaseInput.vue  BaseModal.vue  BaseSpinner.vue  BaseTauriAppBar.vue  BaseUserForm.vue  ChatRoom.vue  IconButton.vue  InviteContent.vue  MessageBuble.vue
src/domains/main/containers/: BaseChatContainer.vue
src/domains/main/icons/: EyeOutline.vue
src/types/: index.ts
