[package]
name = "meshee"
version = "0.1.0"
description = "MeshEE - chat on mesh network"
authors = ["ToffaKrtek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meshee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.51", features = ["tokio", "tcp", "dns", "noise", "yamux", "mplex", "identify", "ping", "macros", "request-response", "serde", "relay", "dcutr"] }
tokio = { version = "1", features = ["full", "time"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version="1.23.0", features = [ "v4" ] }
chrono = "0.4.44"
thiserror = "2.0.18"
machine-uid = "0.4.0" 
blake3 = "1.8.4"
whoami = "2.1.1"
tempfile = "3.27.0"
hex = "0.4.3"
multihash = "0.19.3"
